--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.1"
 authors = ["Eugene Ilin (aka Jenyay) <jenyay.ilin@gmail.com>"]
 build = "build.rs"
 
+[dependencies]
+tempfile = "2.0.1"
+
 [dependencies.hyper]
 version = "0.7.2"
 default-features = false
